--- a/package.json
+++ b/package.json
@@ -11,7 +11,13 @@
   "dependencies": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.4"
+    "next": "15.3.4",
+    "rss-parser": "^3.13.0",
+    "openai": "^4.20.1",
+    "next-themes": "^0.3.0",
+    "lucide-react": "^0.263.1",
+    "date-fns": "^2.30.0",
+    "clsx": "^2.0.0"
   },
   "devDependencies": {
     "typescript": "^5",
