--- a/package.json
+++ b/package.json
@@ -9,25 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.10.0",
+    "clsx": "^2.0.0",
+    "date-fns": "^2.30.0",
+    "he": "^1.2.0",
+    "lucide-react": "^0.263.1",
+    "motion": "^12.19.2",
+    "next": "15.3.4",
+    "next-themes": "^0.3.0",
+    "openai": "^4.20.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "next": "15.3.4",
     "rss-parser": "^3.13.0",
-    "openai": "^4.20.1",
-    "next-themes": "^0.3.0",
-    "lucide-react": "^0.263.1",
-    "date-fns": "^2.30.0",
-    "clsx": "^2.0.0"
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@eslint/eslintrc": "^3",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
     "eslint": "^9",
     "eslint-config-next": "15.3.4",
-    "@eslint/eslintrc": "^3"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
